feat: added user reservation
